--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 
 .DS_Store
 .DS_Store
+.DS_Store
+scripts/.DS_Store
+scripts/1.slim to summary statistics/.DS_Store
+scripts/final_scripts_for_manuscript/.DS_Store
