--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@
 scripts/.DS_Store
 scripts/1.slim to summary statistics/.DS_Store
 scripts/final_scripts_for_manuscript/.DS_Store
+scripts/final_scripts_for_manuscript/.DS_Store
+scripts/1.slim to summary statistics/.DS_Store
+scripts/.DS_Store
+.DS_Store
