--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ scripts/final_scripts_for_manuscript/.DS_Store
 scripts/1.slim to summary statistics/.DS_Store
 scripts/.DS_Store
 .DS_Store
+.DS_Store
